# totalview-itch.rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  clippy.toml  deny.toml  install.sh  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: parsing_bench.rs
src/: backend.rs  buffer.rs  constants.rs  lib.rs  main.rs  message.rs  message_v3.rs  messages.rs  orderbook.rs  orders.rs  parser.rs  reader.rs  writer.rs
src/.old_ref_only/: orderbook.rs
src/message/: add_order.rs  broken_trade.rs  cancel_order.rs  cross_trade.rs  delete_order.rs  execute_order.rs  noii.rs  replace_order.rs  system_event.rs  test_helpers.rs  timestamp.rs  trade.rs
src/parser/: message.rs
src/writer/: csv.rs
