[package]
name = "lobsters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "50.0.0"
byteorder = "1.5.0"
csv = "1.3.0"
getset = "0.1.5"
parquet = "50.0.0"
serde = { version="1.0.195", features=["derive"] }
strum = "0.25.0"
strum_macros = "0.25.3"
